--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Barbearia Luxe - O melhor lugar para cuidar do seu visual. Conheça nossos serviços, produtos e reserve seu horário.">
     <meta name="keywords" content="barbearia, corte de cabelo, barba, grooming, barbearia de luxo">
     <meta name="author" content="Seu Nome ou Nome da Empresa">
-    <link rel="icon" href="./img/logo.png">
+    <link rel="icon" href="./img/logo1.png">
     <title>Barbearia Luxe</title>
     <link rel="stylesheet" href="./ativos/css/styles.css">
     <link rel="stylesheet" href="./ativos/css/responsivo.css">
@@ -20,7 +20,7 @@
     <header class="header">
         <section>
             <a href="#" class="logo">
-                <img src="./img/logo.png" alt="logo da Barbearia Luxe">
+                <img src="./img/logo1.png" alt="logo da Barbearia Luxe">
             </a>
 
             <nav class="navbar">
@@ -52,7 +52,7 @@
 
     <!-- Botão flutuante para WhatsApp -->
     <a href="https://api.whatsapp.com/send?phone=SEUNUMERO&text=Olá,%20gostaria%20de%20agendar%20um%20horário" class="whatsapp-button" target="_blank">
-        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png" />
+        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png" alt="Ícone do WhatsApp" />
     </a>
 
     <!-- Seção Home -->
@@ -122,7 +122,7 @@
                     <li>Finalização com produtos de qualidade</li>
                     <li>Atendimento personalizado</li>
                 </ul>
-                <a href="#" class="btn">Agende Agora</a>
+                <a href="#" class="btn" title="Agende um Corte de Cabelo">Agende Agora</a>
             </div>
             <div class="price-card">
                 <h3>Barba Estilizada</h3>
@@ -134,7 +134,7 @@
                     <li>Tratamento da pele inclusivo</li>
                     <li>Produtos específicos para barba</li>
                 </ul>
-                <a href="#" class="btn">Agende Agora</a>
+                <a href="#" class="btn" title="Agende um Tratamento de Barba">Agende Agora</a>
             </div>
             <div class="price-card">
                 <h3>Cuidados com a Pele</h3>
@@ -146,10 +146,12 @@
                     <li>Hidratação intensiva</li>
                     <li>Tratamentos anti-envelhecimento</li>
                 </ul>
-                <a href="#" class="btn">Agende Agora</a>
+                <a href="#" class="btn" title="Agende um Tratamento Facial">Agende Agora</a>
             </div>
+
         </div>
     </section>
+
 
     <!-- Seção Equipe -->
     <section id="team" class="team">
@@ -206,7 +208,7 @@
         <h2 class="title">Avaliações de Clientes</h2>
         <div class="review-container">
             <div class="review">
-                <img src="./img/avaliação/avaliacao2.jpg" alt="foto do cliente 1">
+                <img src="./img/avaliação/avaliacao1.jpg" alt="foto do cliente 1">
                 <p>"Serviço impecável, ambiente agradável e profissionais muito competentes. Recomendo!"</p>
                 <h3>Lucas Silva</h3>
                 <div class="stars">
@@ -218,7 +220,7 @@
                 </div>
             </div>
             <div class="review">
-                <img src="./img/avaliação/avaliacao1.jpg" alt="foto do cliente 2">
+                <img src="./img/avaliação/avaliacao2.jpg" alt="foto do cliente 2">
                 <p>"Melhor barbearia da cidade! Atendimento excelente e produtos de alta qualidade."</p>
                 <h3>Patrícia Souza</h3>
                 <div class="stars">
@@ -257,7 +259,7 @@
 
     <!-- Rodapé -->
     <footer class="footer">
-        <p>&copy; 2024 Barbearia Luxe. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Barbearia Luxe. Todos os direitos reservados. </> Thomas Nascimento.</p>
         <div class="social-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
