--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     </section>
 
     <!-- Rodapé -->
-    <<footer class="footer">
+    <footer class="footer">
         <p>&copy; 2024 Barbearia Luxe. Todos os direitos reservados. </> Thomas Nascimento.</p>
         <div class="social-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
